perf(core): reduce response and order lifecycle allocations